--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -53,6 +53,23 @@ permissions:
   contents: read
 
 jobs:
+  setup:
+    name: 'Setup GCP and Terraform'
+    runs-on: ubuntu-latest
+    permissions:
+      contents: 'read'
+      id-token: 'write'
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Auth GCP Service Account
+        id: auth-gcp
+        uses: google-github-actions/auth@v0
+        with:
+          token_format: 'access_token'
+          workload_identity_provider: 'projects/813165853992/locations/global/workloadIdentityPools/cicd-pool-git/providers/cicd-provider'
+          service_account: 'github-sa@lofty-object-378217.iam.gserviceaccount.com'
   terraform:
     name: 'Terraform'
     runs-on: ubuntu-latest
