--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -32,6 +32,9 @@ jobs:
 
       - name: Terraform Init
         run: terraform init
+        
+      - name: Terraform Format
+        run: terraform fmt -check
 
 #  terraform:
 #    name: 'Terraform'
