--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -32,9 +32,9 @@ jobs:
 
       - name: Terraform Init
         run: terraform init
-        
-      - name: Terraform Format
-        run: terraform fmt -check
+
+      - name: Terraform Plan
+        run: terraform plan -input=false
 
 #  terraform:
 #    name: 'Terraform'
