--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -37,8 +37,8 @@ jobs:
         run: terraform plan -var-file=variables.tfvars
 
       - name: Terraform Apply
-        if: github.ref == 'refs/heads/"main"' && github.event_name == 'push'
-        run: terraform apply  -auto-approve -var-file=variables.tfvars
+        if: github.ref == 'refs/heads/"main"'
+        run: terraform apply -auto-approve -var-file=variables.tfvars
 
 #  terraform:
 #    name: 'Terraform'
