--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -37,7 +37,7 @@ jobs:
         run: terraform plan -var-file=variables.tfvars
 
       - name: Terraform Apply
-        if: github.ref == 'refs/heads/"main"'
+        #if: github.ref == 'refs/heads/"main"'
         run: terraform apply -auto-approve #-var-file=variables.tfvars
 
 #  terraform:
