--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -33,8 +33,8 @@ jobs:
       - name: Terraform Init
         run: terraform init
 
-      - name: tf unloack
-        run: terraform force-unlock -force 1676758098581534
+      #- name: Terraform unlock
+      #  run: terraform force-unlock -force 1676758098581534
 
       - name: Terraform Plan
         run: terraform plan -var-file=variables.tfvars
