--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -22,8 +22,8 @@ env:
   GKE_CLUSTER: stateful-gkeapp   # TODO: update to cluster name
   GKE_ZONE: europe-west2-a   # TODO: update to cluster zone
   DEPLOYMENT_NAME: gke-test # TODO: update to deployment name
-  REPOSITORY: samples # TODO: update to Artifact Registry docker repository
-  IMAGE: static-site
+  REPOSITORY: europe-west2-docker.pkg.dev/lofty-object-378217/sonar-docker # TODO: update to Artifact Registry docker repository
+  IMAGE: sonarqube
 
 jobs:
   setup-build-publish-deploy:
