--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -61,8 +61,8 @@ jobs:
     - name: Set up GKE credentials
       uses: google-github-actions/get-gke-credentials@v0
       with:
-        cluster_name: stateful-gkeapp
-        location: europe-west2-a
+        cluster_name: ${{ env.GKE_CLUSTER }}
+        location: ${{ env.GKE_ZONE }}
 
     # Build the Docker image
     - name: Build
