--- a/sonarqube/docker-image.yml
+++ b/sonarqube/docker-image.yml
@@ -15,4 +15,4 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build the Docker image
-      run: docker build . --file ./../sonarqube/Dockerfile --tag sonarqube:$(date +%s)
+      run: docker build . --file Dockerfile --tag sonarqube:$(date +%s)
