--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,4 +15,4 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build the Docker image
-      run: docker build . --file /home/runner/work/GKE/GKE/sonarqube/Dockerfile --tag sonarqube:$(date +%s)
+      run: docker build . --file /home/runner/work/GKE/GKE/sonarqube/Dockerfile #--tag sonarqube:$(date +%s)
