--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -49,10 +49,10 @@ jobs:
         service_account: 'github-sa@lofty-object-378217.iam.gserviceaccount.com'
 
     # Alternative option - authentication via credentials json
-    - id: 'auth'
-      uses: 'google-github-actions/auth@v0'
-      with:
-        credentials_json: '${{ secrets.GCP_SA_KEY }}'
+    #- id: 'auth'
+    #  uses: 'google-github-actions/auth@v0'
+    #  with:
+    #    credentials_json: '${{ secrets.GCP_SA_KEY }}'
 
     - name: Docker configuration
       run: |-
