--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -68,7 +68,7 @@ jobs:
     - name: Build
       run: |-
         docker build .\
-          --file /home/runner/work/GKE/GKE/sonarqube/Dockerfile
+          --file /home/runner/work/GKE/GKE/sonarqube/Dockerfile \
           --tag "$GAR_LOCATION-docker.pkg.dev/$PROJECT_ID/$REPOSITORY/$IMAGE:$GITHUB_SHA" \
           --build-arg GITHUB_SHA="$GITHUB_SHA" \
           --build-arg GITHUB_REF="$GITHUB_REF" \
