--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -74,6 +74,8 @@ jobs:
           --tag "$GAR_LOCATION-docker.pkg.dev/$PROJECT_ID/$REPOSITORY/$IMAGE:$GITHUB_SHA" \
           --build-arg GITHUB_SHA="$GITHUB_SHA" \
           --build-arg GITHUB_REF="$GITHUB_REF" \
+        
+        docker image ls
           
     # Push the Docker image to Google Artifact Registry
     - name: Publish
