--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -80,5 +80,6 @@ jobs:
     # Push the Docker image to Google Artifact Registry
     - name: Publish
       run: |-
+        docker image ls
         docker push "$GAR_LOCATION-docker.pkg.dev/$PROJECT_ID/$REPOSITORY/$IMAGE:$GITHUB_SHA"
     
