--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -57,6 +57,8 @@ jobs:
     - name: Docker configuration
       run: |-
         echo ${{steps.auth.outputs.access_token}} | docker login -u oauth2accesstoken --password-stdin https://$GAR_LOCATION-docker.pkg.dev
+
+        echo ${{steps.auth.outputs.access_token}} | docker login -u oauth2accesstoken --password-stdin https://gcr.io
     # Get the GKE credentials so we can deploy to the cluster
     #- name: Set up GKE credentials
     #  uses: google-github-actions/get-gke-credentials@v1
