--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -22,7 +22,7 @@ env:
   GKE_CLUSTER: stateful-gkeapp   # TODO: update to cluster name
   GKE_ZONE: europe-west2-a   # TODO: update to cluster zone
   DEPLOYMENT_NAME: gke-test # TODO: update to deployment name
-  REPOSITORY: europe-west2-docker.pkg.dev/lofty-object-378217/sonar-docker # TODO: update to Artifact Registry docker repository
+  REPOSITORY: sonar-docker # TODO: update to Artifact Registry docker repository
   IMAGE: sonarqube
 
 jobs:
@@ -66,14 +66,19 @@ jobs:
     #    cluster_name: ${{ env.GKE_CLUSTER }}
     #    location: ${{ env.GKE_ZONE }}
     - name: gcloud auth
-      run: gcloud auth configure-docker europe-west2-docker.pkg.dev && gcloud auth configure-docker gcr.io
+      run: |-
+        gcloud auth configure-docker
+
+        gcloud auth configure-docker europe-west2-docker.pkg.dev
+
+        gcloud auth configure-docker gcr.io
 
     # Build the Docker image
     - name: Build
       run: |-
         docker build .\
           --file /home/runner/work/GKE/GKE/sonarqube/Dockerfile \
-          --tag "$GAR_LOCATION-docker.pkg.dev/$PROJECT_ID/$REPOSITORY/$IMAGE:latest" \
+          --tag "europe-west2-docker.pkg.dev/$PROJECT_ID/$REPOSITORY/$IMAGE:latest" \
           --build-arg GITHUB_SHA="$GITHUB_SHA" \
           --build-arg GITHUB_REF="$GITHUB_REF" \
         
@@ -84,4 +89,4 @@ jobs:
       run: |-
         docker image ls
         
-        docker push europe-west2-docker.pkg.dev/lofty-object-378217/europe-west2-docker.pkg.dev/lofty-object-378217/sonar-docker/sonarqube:latest
+        docker push europe-west2-docker.pkg.dev/lofty-object-378217/sonar-docker/sonarqube:latest
