--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -95,8 +95,8 @@ jobs:
     - name: Set up GKE credentials
       uses: google-github-actions/get-gke-credentials@v0
       with:
-        cluster_name: ${{ env.GKE_CLUSTER }}
-        location: ${{ env.GKE_ZONE }}
+        cluster_name: stateful-gkeapp
+        location: europe-west2
     
     # Set up kustomize
     - name: Set up Kustomize
