--- a/sonarqube/deploy.yaml
+++ b/sonarqube/deploy.yaml
@@ -137,7 +137,7 @@ spec:
           privileged: true
       containers:
       - name: sonarqube
-        image: sonarqube:8.9.1-community
+        image: europe-west2-docker.pkg.dev/lofty-object-378217/sonar-docker/sonarqube:latest
         imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 9000
