--- a/sonarqube/deploy.yaml
+++ b/sonarqube/deploy.yaml
@@ -8,7 +8,7 @@ kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
   name: postgres-pvc
-  namespace: default
+  namespace: sonarqube-deploy
 spec:
   accessModes:
     - ReadWriteOnce
@@ -20,7 +20,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: postgres
-  namespace: sonar
+  namespace: sonarqube-deploy
   labels:
     app: postgres
 data:
@@ -32,7 +32,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: postgres
-  namespace: sonar
+  namespace: sonarqube-deploy
   labels:
     app: postgres
 spec:
@@ -46,7 +46,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: postgres
-  namespace: sonar
+  namespace: sonarqube-deploy
   labels:
     app: postgres
 spec:
@@ -85,7 +85,7 @@ kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
   name: sonar-pvc
-  namespace: sonar
+  namespace: sonarqube-deploy
 spec:
   accessModes:
     - ReadWriteOnce
@@ -97,7 +97,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: sonar-config
-  namespace: sonar
+  namespace: sonarqube-deploy
   labels:
     app: sonar
 data:
@@ -110,7 +110,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: sonar
-  namespace: sonar
+  namespace: sonarqube-deploy
   labels:
     app: sonar
 spec:
@@ -165,7 +165,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: sonar-svc
-  namespace: sonar
+  namespace: sonarqube-deploy
   labels:
     app: sonar
 spec:
@@ -179,7 +179,7 @@ apiVersion: networking.k8s.io/v1beta1
 kind: Ingress
 metadata:
   name: sonar
-  namespace: sonar
+  namespace: sonarqube-deploy
   annotations:
     kubernetes.io/ingress.class: "nginx"
     nginx.ingress.kubernetes.io/ssl-redirect: "true"
