--- a/sonarqube/deploy.yaml
+++ b/sonarqube/deploy.yaml
@@ -181,7 +181,7 @@ metadata:
   name: sonar
   namespace: sonarqube-deploy
   annotations:
-    kubernetes.io/ingress.class: "nginx"
+    kubernetes.io/ingress.class: "gce"
     nginx.ingress.kubernetes.io/ssl-redirect: "true"
 spec:
   tls:
