--- a/sonarqube/deploy.yaml
+++ b/sonarqube/deploy.yaml
@@ -175,25 +175,25 @@ spec:
   selector:
     app: sonar
 ---
-apiVersion: networking.k8s.io/v1beta1
-kind: Ingress
-metadata:
-  name: sonar
-  namespace: sonarqube-deploy
-  annotations:
-    kubernetes.io/ingress.class: "gce"
-    nginx.ingress.kubernetes.io/ssl-redirect: "true"
-spec:
-  tls:
-    - hosts:
-      - myfancy.domain.com
-      secretName: my-fancy-certs
-  rules:
-  - host: myfancy.domain.com
-    http:
-      paths:
-      - path: /
-        backend:
-          serviceName: sonar
-          servicePort: 9000
----
+#apiVersion: networking.k8s.io/v1beta1
+#kind: Ingress
+#metadata:
+#  name: sonar
+#  namespace: sonarqube-deploy
+#  annotations:
+#    kubernetes.io/ingress.class: "gce"
+#    nginx.ingress.kubernetes.io/ssl-redirect: "true"
+#spec:
+#  tls:
+#    - hosts:
+#      - myfancy.domain.com
+#      secretName: my-fancy-certs
+#  rules:
+#  - host: myfancy.domain.com
+#    http:
+#      paths:
+#      - path: /
+#        backend:
+#          serviceName: sonar
+#          servicePort: 9000
+#---
