--- a/sonarqube/deploy.yaml
+++ b/sonarqube/deploy.yaml
@@ -1,14 +1,8 @@
----
-apiVersion: v1
-kind: Namespace
-metadata:
-  name: sonarqube-deploy
----
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
   name: postgres-pvc
-  namespace: sonarqube-deploy
+  namespace: default
 spec:
   accessModes:
     - ReadWriteOnce
@@ -20,180 +14,11 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: postgres
-  namespace: sonarqube-deploy
+  namespace: sonar
   labels:
     app: postgres
 data:
-  POSTGRESQL_USERNAME: sonar_user
-  POSTGRESQL_DATABASE: sonar_db
-  POSTGRESQL_PASSWORD: S0N4RQUB3
+  POSTGRESQL_USERNAME: ${{ secrets.POSTGRESQL_USERNAME }}
+  POSTGRESQL_DATABASE: ${{ secrets.POSTGRESQL_DATABASE }}
+  POSTGRESQL_PASSWORD: ${{ secrets.POSTGRESQL_PASSWORD }}
 ---
-apiVersion: v1
-kind: Service
-metadata:
-  name: postgres
-  namespace: sonarqube-deploy
-  labels:
-    app: postgres
-spec:
-  ports:
-  - port: 5432
-    name: postgres
-  selector:
-    app: postgres
----
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: postgres
-  namespace: sonarqube-deploy
-  labels:
-    app: postgres
-spec:
-  replicas: 1
-  selector:
-    matchLabels:
-      app: postgres
-  template:
-    metadata:
-      labels:
-        app: postgres
-    spec:
-      securityContext:
-        fsGroup: 2000 
-      containers:
-      - name: postgress
-        image: bitnami/postgresql
-        imagePullPolicy: IfNotPresent
-        ports:
-        - containerPort: 5432
-        env:
-        - name: ALLOW_EMPTY_PASSWORD
-          value: "yes"
-        envFrom:
-        - configMapRef:
-            name: postgres
-        volumeMounts:
-        - name: postgres
-          mountPath: /bitnami/postgresql
-      volumes:
-      - name: postgres
-        persistentVolumeClaim:
-          claimName: postgres-pvc
----
-kind: PersistentVolumeClaim
-apiVersion: v1
-metadata:
-  name: sonar-pvc
-  namespace: sonarqube-deploy
-spec:
-  accessModes:
-    - ReadWriteOnce
-  resources:
-    requests:
-      storage: 50Gi
----
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: sonar-config
-  namespace: sonarqube-deploy
-  labels:
-    app: sonar
-data:
-  SONARQUBE_JDBC_URL: "jdbc:postgresql://postgres:5432/sonar_db"
-  SONARQUBE_JDBC_USERNAME: "sonar_user"
-  SONARQUBE_JDBC_PASSWORD: "S0N4RQUB3"
-  JAVA_OPTS: "-Duser.timezone=Asia/Jakarta -Xmx2048m"
----
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: sonar
-  namespace: sonarqube-deploy
-  labels:
-    app: sonar
-spec:
-  replicas: 1
-  strategy:
-    type: Recreate
-  selector:
-    matchLabels:
-      app: sonar
-  template:
-    metadata:
-      labels:
-        app: sonar
-    spec:
-      initContainers:
-      - name: init
-        image: busybox
-        command:
-        - sysctl
-        - -w
-        - vm.max_map_count=262144
-        imagePullPolicy: IfNotPresent
-        securityContext:
-          privileged: true
-      containers:
-      - name: sonarqube
-        image: europe-west2-docker.pkg.dev/lofty-object-378217/sonar-docker/sonarqube:latest
-        imagePullPolicy: IfNotPresent
-        ports:
-        - containerPort: 9000
-        envFrom:
-        - configMapRef:
-            name: sonar-config
-        volumeMounts:
-        - name: app-pvc
-          mountPath: "/opt/sonarqube/data/"
-          subPath: data
-        - name: app-pvc
-          mountPath: "/opt/sonarqube/extensions/"
-          subPath: extensions
-        resources:
-          requests:
-            memory: "1024Mi"
-          limits:
-            memory: "2048Mi"
-      volumes:
-      - name: app-pvc
-        persistentVolumeClaim:
-          claimName: sonar-pvc
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: sonar-svc
-  namespace: sonarqube-deploy
-  labels:
-    app: sonar
-spec:
-  ports:
-  - port: 9000
-    name: sonar
-  selector:
-    app: sonar
----
-#apiVersion: networking.k8s.io/v1beta1
-#kind: Ingress
-#metadata:
-#  name: sonar
-#  namespace: sonarqube-deploy
-#  annotations:
-#    kubernetes.io/ingress.class: "gce"
-#    nginx.ingress.kubernetes.io/ssl-redirect: "true"
-#spec:
-#  tls:
-#    - hosts:
-#      - myfancy.domain.com
-#      secretName: my-fancy-certs
-#  rules:
-#  - host: myfancy.domain.com
-#    http:
-#      paths:
-#      - path: /
-#        backend:
-#          serviceName: sonar
-#          servicePort: 9000
-#---
