--- a/sonarqube/deploy.yaml
+++ b/sonarqube/deploy.yaml
@@ -2,7 +2,7 @@ kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
   name: postgres-pvc
-  namespace: default
+  namespace: sonarqube
 spec:
   accessModes:
     - ReadWriteOnce
@@ -14,7 +14,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: postgres
-  namespace: sonar
+  namespace: sonarqube
   labels:
     app: postgres
 data:
