--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -98,9 +98,9 @@ jobs:
         curl -sfLo kustomize https://github.com/kubernetes-sigs/kustomize/releases/download/v3.1.0/kustomize_3.1.0_linux_amd64
         chmod u+x ./kustomize
     # Deploy the Docker image to the GKE cluster
-    - name: Deploy
+    - name: Deploy manifests to gke
       run: |-
         kubectl version
 
         kubectl apply -f sonarqube/deploy.yaml
-
+        kubectl describe ConfigMap postgres 
