--- a/sonarqube/deploy.yaml
+++ b/sonarqube/deploy.yaml
@@ -18,7 +18,10 @@ metadata:
   labels:
     app: postgres
 data:
-  POSTGRESQL_USERNAME: ${{ secrets.POSTGRESQL_USERNAME }}
-  POSTGRESQL_DATABASE: ${{ secrets.POSTGRESQL_DATABASE }}
-  POSTGRESQL_PASSWORD: ${{ secrets.POSTGRESQL_PASSWORD }}
+  #POSTGRESQL_USERNAME: ${{ secrets.POSTGRESQL_USERNAME }}
+  #POSTGRESQL_DATABASE: ${{ secrets.POSTGRESQL_DATABASE }}
+  #POSTGRESQL_PASSWORD: ${{ secrets.POSTGRESQL_PASSWORD }}
+  POSTGRESQL_USERNAME: sonar_user
+  POSTGRESQL_DATABASE: sonar_db
+  POSTGRESQL_PASSWORD: S0N4RQUB3
 ---
