--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -10,7 +10,7 @@
 #
 # For more support on how to run the workflow, please visit https://github.com/google-github-actions/setup-gcloud/tree/master/example-workflows/gke-kustomize
 
-name: Build and push docker image to gar
+name: docker image build, push and k8s manifests deploy
 
 on:
   push:
