--- a/sonarqube/deploy.yaml
+++ b/sonarqube/deploy.yaml
@@ -18,10 +18,63 @@ metadata:
   labels:
     app: postgres
 data:
-  #POSTGRESQL_USERNAME: ${{ secrets.POSTGRESQL_USERNAME }}
-  #POSTGRESQL_DATABASE: ${{ secrets.POSTGRESQL_DATABASE }}
-  #POSTGRESQL_PASSWORD: ${{ secrets.POSTGRESQL_PASSWORD }}
-  POSTGRESQL_USERNAME: sonar_user
-  POSTGRESQL_DATABASE: sonar_db
-  POSTGRESQL_PASSWORD: S0N4RQUB3
+  POSTGRESQL_USERNAME: ${{ secrets.POSTGRESQL_USERNAME }}
+  POSTGRESQL_DATABASE: ${{ secrets.POSTGRESQL_DATABASE }}
+  POSTGRESQL_PASSWORD: ${{ secrets.POSTGRESQL_PASSWORD }}
+  #POSTGRESQL_USERNAME: sonar_user
+  #POSTGRESQL_DATABASE: sonar_db
+  #POSTGRESQL_PASSWORD: S0N4RQUB3
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: postgres
+  namespace: sonarqube
+  labels:
+    app: postgres
+spec:
+  ports:
+  - port: 5432
+    name: postgres
+  selector:
+    app: postgres
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: postgres
+  namespace: sonarqube
+  labels:
+    app: postgres
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: postgres
+  template:
+    metadata:
+      labels:
+        app: postgres
+    spec:
+      securityContext:
+        fsGroup: 2000 
+      containers:
+      - name: postgress
+        image: bitnami/postgresql
+        imagePullPolicy: IfNotPresent
+        ports:
+        - containerPort: 5432
+        env:
+        - name: ALLOW_EMPTY_PASSWORD
+          value: "yes"
+        envFrom:
+        - configMapRef:
+            name: postgres
+        volumeMounts:
+        - name: postgres
+          mountPath: /bitnami/postgresql
+      volumes:
+      - name: postgres
+        persistentVolumeClaim:
+          claimName: postgres-pvc
 ---
