--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -90,4 +90,4 @@ jobs:
       run: |-
         kubectl version
 
-        kubectl delete -f sonarqube/deploy.yaml
+        kubectl apply -f sonarqube/deploy.yaml
