--- a/sonarqube/deploy.yaml
+++ b/sonarqube/deploy.yaml
@@ -24,7 +24,7 @@ spec:
     requests:
       storage: 2Gi
 ---
-apiVersion: apps/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
