--- a/sonarqube/deploy.yaml
+++ b/sonarqube/deploy.yaml
@@ -34,7 +34,7 @@ metadata:
 spec:
   replicas: 1
   selector:
-    app: sonar
+    app: sonarqube
   template:
     metadata:
       labels:
@@ -73,3 +73,21 @@ spec:
         persistentVolumeClaim:
           claimName: sonar-extensions
 ---
+
+apiVersion: networking.k8s.io/v1beta1
+kind: Ingress
+metadata:
+  name: sonar
+  namespace: sonar
+  annotations:
+    kubernetes.io/ingress.class: "gce"
+    #nginx.ingress.kubernetes.io/ssl-redirect: "true"
+spec:
+  rules:
+  - host: sonarqube.d-e-l-o.com
+    http:
+      paths:
+      - path: /
+        backend:
+          serviceName: sonar
+          servicePort: 9000
