--- a/sonarqube/deploy.yaml
+++ b/sonarqube/deploy.yaml
@@ -43,7 +43,7 @@ spec:
     spec:
       containers:
         - name: sonarqube
-          image: europe-west2-docker.pkg.dev/lofty-object-378217/sonar-docker/sonarqube:latest
+          image: sonarqube:8.9.1-community
           resources:
             requests:
               cpu: 500m
@@ -82,7 +82,7 @@ spec:
   domains:
     - sonarqube.d-e-l-o.com
 ---
-apiVersion: networking.k8s.io/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: sonaringress
