--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -91,4 +91,4 @@ jobs:
     # Deploy the Docker image to the GKE cluster
     - name: Deploy manifests to gke
       run: |-
-        kubectl delete -f sonarqube/deploy.yaml
+        kubectl apply -f sonarqube/deploy.yaml
