--- a/sonarqube/deploy.yaml
+++ b/sonarqube/deploy.yaml
@@ -1,81 +1,79 @@
-apiVersion: v1
 kind: PersistentVolumeClaim
+apiVersion: v1
 metadata:
-  name: sonar-data
+  name: sonar-pvc
   namespace: sonarqube
 spec:
   accessModes:
-  - ReadWriteOnce
-  storageClassName: default
+    - ReadWriteOnce
   resources:
     requests:
-      storage: 2Gi
+      storage: 5Gi
 ---
-apiVersion: v1
-kind: PersistentVolumeClaim
+apiVersion: storage.k8s.io/v1
+kind: StorageClass
 metadata:
-  name: sonar-extensions
-  namespace: sonarqube
-spec:
-  accessModes:
-  - ReadWriteOnce
-  storageClassName: default
-  resources:
-    requests:
-      storage: 2Gi
+  name: sonarqubesc
+provisioner: kubernetes.io/gce-pd
+parameters:
+  type: pd-standard
+  fstype: ext4
+  replication-type: none
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: sonarqube
+  name: sonar
   namespace: sonarqube
   labels:
-    app: sonarqube
+    app: sonar
 spec:
   replicas: 1
+  strategy:
+    type: Recreate
   selector:
     matchLabels:
-      app: sonarqube
+      app: sonar
   template:
     metadata:
       labels:
-        app: sonarqube
+        app: sonar
     spec:
+      initContainers:
+      - name: init
+        image: busybox
+        command:
+        - sysctl
+        - -w
+        - vm.max_map_count=262144
+        imagePullPolicy: IfNotPresent
+        securityContext:
+          privileged: true
       containers:
-        - name: sonarqube
-          image: sonarqube:8.9.1-community
-          imagePullPolicy: IfNotPresent
-          resources:
-            requests:
-              cpu: 500m
-              memory: 1024Mi
-            limits:
-              cpu: 2000m
-              memory: 2048Mi
-          #volumeMounts:
-          #- mountPath: "/opt/sonarqube/data/"
-          #  name: sonar-data
-          #  subPath: data
-          #- mountPath: "/opt/sonarqube/extensions/"
-          #  name: sonar-extensions
-          #  subPath: extensions
-          env:
-          - name: "SONARQUBE_JDBC_USERNAME"
-            value: ${{ env.POSTGRESQL_USERNAME}}
-          - name: "SONARQUBE_JDBC_URL"
-            value: ${{ env.POSTGRESQL_JBDCURL}}
-          - name: "SONARQUBE_JDBC_PASSWORD"
-            value: ${{ env.POSTGRESQL_PASSWORD}}
-          ports:
-          - containerPort: 9000
-            protocol: TCP
-      #volumes:
-      #- name: sonar-data
-      #  persistentVolumeClaim:
-      #    claimName: sonar-data
-      #- name: sonar-extensions
-      #  persistentVolumeClaim:
-      #    claimName: sonar-extensions
+      - name: sonarqube
+        image: sonarqube:8.9.1-community
+        imagePullPolicy: IfNotPresent
+        ports:
+        - containerPort: 9000
+        envFrom:
+        - configMapRef:
+            name: sonar-config
+        volumeMounts:
+        - name: app-pvc
+          mountPath: "/opt/sonarqube/data/"
+          subPath: data
+        - name: app-pvc
+          mountPath: "/opt/sonarqube/extensions/"
+          subPath: extensions
+        resources:
+          requests:
+            memory: "1024Mi"
+          limits:
+            memory: "2048Mi"
+      volumes:
+      - name: app-pvc
+        persistentVolumeClaim:
+          claimName: sonar-pvc
 ---
 apiVersion: v1
 kind: Service
