--- a/sonarqube/deploy.yaml
+++ b/sonarqube/deploy.yaml
@@ -15,6 +15,8 @@ kind: StorageClass
 metadata:
   name: sonarqubesc
 provisioner: kubernetes.io/gce-pd
+volumeBindingMode: WaitForFirstConsumer
+reclaimPolicy: Delete
 parameters:
   type: pd-standard
   fstype: ext4
