--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -91,5 +91,4 @@ jobs:
     # Deploy the Docker image to the GKE cluster
     - name: Deploy manifests to gke
       run: |-
-        kubectl apply -f sonarqube/deploy.yaml
-        kubectl get storageclass
+        kubectl delete -f sonarqube/deploy.yaml
