--- a/sonarqube/deploy.yaml
+++ b/sonarqube/deploy.yaml
@@ -91,7 +91,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: mc-service
+  name: sqservice
   namespace: sonarqube
 spec:
   selector:
@@ -121,17 +121,11 @@ metadata:
     networking.gke.io/managed-certificates: managed-cert
     nginx.ingress.kubernetes.io/ssl-redirect: "true"
 spec:
-  defaultBackend:
-    service:
-      name: mc-service
-      port:
-        number: 9000
-#spec:
-#  rules:
-#  - host: sonarqube.d-e-l-o.com
-#    http:
-#      paths:
-#      - path: /
-#        backend:
-#          serviceName: sonar
-#          servicePort: 9000
+  rules:
+  - host: sonarqube.d-e-l-o.com
+    http:
+      paths:
+      - path: /
+        backend:
+          serviceName: sqservice
+          servicePort: 9000
