--- a/sonarqube/manifests.yaml
+++ b/sonarqube/manifests.yaml
@@ -92,29 +92,29 @@ spec:
         persistentVolumeClaim:
           claimName: sonar-pvc
 ---
-#apiVersion: v1
-#kind: Service
-#metadata:
-#  name: sqservice
-#  namespace: sonarapp
-#  labels:
-#    app: sonar
-#spec:
-#  selector:
-#    app: sonar
-#  ports:
-#    - protocol: TCP
-#      port: 9000
-#---
-#apiVersion: networking.gke.io/v1
-#kind: ManagedCertificate
-#metadata:
-#  name: managed-cert
-#  namespace: sonarapp
-#spec:
-#  domains:
-#    - sonarqube.d-e-l-o.com
-#---
+apiVersion: v1
+kind: Service
+metadata:
+  name: sqservice
+  namespace: sonarapp
+  labels:
+    app: sonar
+spec:
+  selector:
+    app: sonar
+  ports:
+    - protocol: TCP
+      port: 9000
+---
+apiVersion: networking.gke.io/v1
+kind: ManagedCertificate
+metadata:
+  name: managed-cert
+  namespace: sonarapp
+spec:
+  domains:
+    - sonarqube.d-e-l-o.com
+---
 #apiVersion: networking.k8s.io/v1
 #kind: Ingress
 #metadata:
