--- a/sonarqube/manifests.yaml
+++ b/sonarqube/manifests.yaml
@@ -138,3 +138,20 @@ spec:
             port: 
               number: 9000
 ---
+apiVersion: v1
+kind: Service
+metadata:
+  labels:
+    app: sonar
+  name: sonarqube
+  namespace: sonarapp
+spec:
+  ports:
+    - name: sonar
+      port: 80
+      protocol: TCP
+      targetPort: 9000
+  selector:
+    app: sonarqube
+  type: LoadBalancer
+---
