--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -90,5 +90,6 @@ jobs:
         chmod u+x ./kustomize
     # Deploy the Docker image to the GKE cluster
     - name: Deploy manifests to gke
-      run: |-        
+      run: |-
+        kubectl delete ingress sonaringress -n sonarapp
         kubectl apply -f sonarqube/manifests.yaml
