--- a/gkeapp/Dockerfile
+++ b/gkeapp/Dockerfile
@@ -1,12 +1,4 @@
-FROM golang:1.19.2 as builder
-WORKDIR /app
-RUN go mod init hello-app
-COPY *.* ./
-RUN CGO_ENABLED=0 GOOS=linux go build -o /hello-app
+FROM ghcr.io/laniksj/docker-php-alpine:master
 
-FROM gcr.io/distroless/base-debian11
-WORKDIR /
-COPY --from=builder /hello-app /hello-app
-ENV PORT 8080
-USER nonroot:nonroot
-CMD ["/hello-app"]
+# Copy Test Page
+COPY html/ /var/www/html
