--- a/gkeapp/Dockerfile
+++ b/gkeapp/Dockerfile
@@ -4,8 +4,13 @@ RUN apt-get update && \
     apt-get install -y net-tools
 
 COPY Gemfile /app/Gemfile
-RUN cd /app; bundle install
 COPY app.rb /app/app.rb
 
+RUN cd /app; bundle install
+
+
 EXPOSE 8080
+RUN ["chmod","+x", "/app/Gemfile"]
+RUN ["chmod","+x", "/app/app.rb"]
+
 CMD ["ruby", "/app/app.rb"]
